--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,7 @@
   --b300: rgb(134, 176, 244);
   --b200: rgb(174, 203, 248);
   --b100: rgb(215, 229, 251);
+  --b100-93: rgba(215, 229, 251, 0.93);
   --w200: rgb(247, 247, 247);
 }
 
@@ -38,22 +39,29 @@ header h1 {
 }
 
 .generated-password-wrapper {
-    width: 100%;
-    flex-shrink: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: fixed;
+  width: 100vw;
+  min-height: 100vh;
+  background-color: var(--b100-93);
+  top: 0;
+  left: 0;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: none;
 }
 .generated-password {
     position: relative;
     width: 50%;
+    min-width: 250px;
     background-color: var(--b400);
     border-radius: 6px;
     padding: 20px;
     color: var(--w200);
-    font-family: 'Courier New', Courier, monospace;
     font-size: 3em;
-    overflow: hidden;
+    cursor: pointer;
 }
 
 .generated-password:after {
@@ -64,16 +72,117 @@ header h1 {
     top: 0;
     right: 0;
     background: linear-gradient(to right, transparent, var(--b400) 75%);
+    border-radius: 0 6px 6px 0;
     pointer-events: none;
 }
 
-.generated-password-wrapper  .copy {
+.generated-password-inner {
+  overflow: hidden;
+}
+
+#password-field {
+  font-family: 'Courier New', Courier, monospace;
+  white-space: nowrap;
+}
+
+#password-field::selection {
+  background: var(--b500);
+}
+
+.btn-close {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: -10px;
+  right: -10px;
+  width: 20px;
+  height: 20px;
+  background-color: var(--b500);
+  z-index: 2;
+  border-radius: 10px;
+}
+
+.btn-close span {
+  width: 10px;
+  height: 2px;
+  background-color: var(--b100);
+  border-radius: 2px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform-origin: center;
+  cursor: pointer;
+}
+
+.btn-close span:nth-child(1) {
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.btn-close span:nth-child(2) {
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.generated-password .copy {
     position: absolute;
-    font-size: 1em;
+    font-size: 0.8rem;
+    bottom: -0.8em;
     background-color: var(--b500);
     color: var(--b100);
     padding: 2px 5px 5px 5px;
     border-radius: 6px;
+    opacity: 0;
+    transition: opacity 0.2s ease-in-out;
+}
+
+.generated-password .copy.show {
+  opacity: 1;
+}
+
+ul.shortcuts {
+  position: relative;
+  list-style: none;
+  margin-top: 100px;
+  width: 250px;
+  padding: 30px 20px 20px 20px;
+  background: var(--w200);
+  border-radius: 6px;
+  box-shadow: 2px 2px 20px rgba(0,0,0,0.1);
+  display: none;
+}
+
+ul.shortcuts:before {
+  content: "shortcuts";
+  position: absolute;
+  top: -0.7em;
+  left: 0.8em;
+  background: var(--b400);
+  color: var(--b100);
+  padding: 2px 10px 3px 10px;
+  border-radius: 6px;
+}
+
+li.shortcut {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  font-size: 0.8em;
+  color: var(--b500);
+}
+
+li.shortcut + li.shortcut {
+  margin-top: 10px;
+}
+
+.keyboard-btn {
+  position: relative;
+  background: var(--b500);
+  color: var(--b100);
+  padding: 5px 10px 8px 10px;
+  display: inline-block;
+  border-radius: 6px;
+  min-width: 2.5em;
+  text-align: center;
 }
 
 aside {
@@ -83,9 +192,7 @@ aside {
   width: 50%;
 }
 
-main {
-  width: 50%;
-}
+main {}
 
 fieldset {
   border: none;
@@ -112,7 +219,7 @@ fieldset {
 
 .badge-right {
     display: inline-block;
-    padding: 2px 4px 5px 10px;
+    padding: 2px 10px 5px 10px;
     background: var(--b200);
     border-radius: 0 6px 6px 0;
 }
@@ -120,7 +227,7 @@ fieldset {
 .badge-right input {
     border: none;
     background: none;
-    width: 50px;
+    width: 2.5em;
     text-align: right;
     color: var(--b500);
     font-weight: 600;
@@ -185,18 +292,23 @@ fieldset {
     color: var(--b100);
 }
 
-button {
+button#generate-password {
   background-color: var(--b600);
   color: var(--b100);
   font-weight: 600;
   border: none;
   padding: 10px 20px;
   border-radius: 6px;
+  cursor: pointer;
+}
+
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
 }
 
 input[type="range"] {
   -webkit-appearance: none;
-  margin: 18px 0;
+  margin: 18px 0 40px 0;
   width: 100%;
 }
 input[type="range"]:focus {
@@ -223,6 +335,20 @@ input[type="range"]::-webkit-slider-thumb {
 }
 input[type="range"]:focus::-webkit-slider-runnable-track {
   background: var(--b300);
+}
+
+footer {
+  width: 100%;
+  flex-shrink: 0;
+}
+
+.icon {
+  width: 24px;
+  height: 24px;
+}
+
+.github {
+  background: url('../img/github.svg');
 }
 
 
