--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,6 +12,7 @@
 * {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   margin: 0;
   padding: 0;
 }
@@ -19,13 +20,34 @@
 body {
   background-color: var(--w200);
   font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
-  padding: 20px;
+  /* padding: 20px; */
   margin: 0;
-  display: flex;
+  /* display: flex; */
   flex-direction: row;
-  flex-wrap: wrap;
-  align-items: flex-start;
+  flex-wrap: nowrap;
   min-height: 100vh;
+  overflow-x: hidden;
+}
+
+.left-side {
+  position: fixed;
+  width: 100%;
+  flex-shrink: 0;
+  display: flex;
+  z-index: 2;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: space-between;
+  background: radial-gradient(var(--b100), var(--b500) 200%);
+  align-items: center;
+  padding: 20px;
+  transition: width 0.5s ease-in-out;
+}
+
+.key-instructions {
+  font-weight: 400;
+  color: var(--b500);
+  font-size: 0.8em;
 }
 
 header {
@@ -34,7 +56,7 @@ header {
   flex-shrink: 0;
 }
 header h1 {
-  color: var(--b300);
+  color: var(--b100);
   font-size: 1.1em;
 }
 
@@ -42,15 +64,18 @@ header h1 {
   position: fixed;
   width: 100vw;
   min-height: 100vh;
-  background-color: var(--b100-93);
+  /* background-color: var(--b100-93); */
   top: 0;
   left: 0;
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
+  padding: 60px 30px;
   display: none;
+  pointer-events: none;
+  z-index: 3;
 }
 .generated-password {
     position: relative;
@@ -61,7 +86,9 @@ header h1 {
     padding: 20px;
     color: var(--w200);
     font-size: 3em;
+    box-shadow: 2px 2px 30px 4px rgba(27, 62, 119, 0.36);
     cursor: pointer;
+    pointer-events: visible;
 }
 
 .generated-password:after {
@@ -157,7 +184,7 @@ ul.shortcuts:before {
   top: -0.7em;
   left: 0.8em;
   background: var(--b400);
-  color: var(--b100);
+  color: var(--w200);
   padding: 2px 10px 3px 10px;
   border-radius: 6px;
 }
@@ -187,12 +214,29 @@ li.shortcut + li.shortcut {
 
 aside {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
   width: 50%;
 }
 
-main {}
+#key-symbol {
+  cursor: pointer;
+}
+
+main {
+  width: 60%;
+  padding: 50px 20px 100px 20px;
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  min-height: 100vh;
+  position: relative;
+  opacity: 0;
+  display: none;
+  transition: 0.5s ease-in-out;
+  position: absolute;
+  right: 0;
+}
 
 fieldset {
   border: none;
@@ -242,15 +286,19 @@ fieldset {
   flex-direction: row;
 }
 
+.invisible {
+  display: none;
+}
+
 .pad {
-    position: relative;
-  width: 100px;
-  height: 100px;
+  position: relative;
+  width: 150px;
+  height: 150px;
   display: flex;
-  flex-direction: row;
-  background-color: var(--b200);
+  flex-direction: column;
+  /* background-color: var(--b200); */
   border-radius: 6px;
-  padding: 10px;
+  /* padding: 10px; */
   margin: 5px;
   cursor: pointer;
   /* overflow: hidden; */
@@ -258,22 +306,26 @@ fieldset {
   transition: 0.5s ease-in-out;
 }
 
-.pad:hover .background-fill {
-    border: solid 3px var(--b500);
+.pad:hover .border {
 }
 
-.pad:hover input:checked ~ .background-fill {
-    border: solid 3px var(--b300);
+.pad:hover input:checked ~ .border {
 }
 
 .background-fill {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    border-radius: 6px;
+    flex-grow: 2;
+    border-radius: 6px 6px 0 0;
     background-color: var(--b200);
+    padding: 10px;
+    color: var(--b500);
+}
+
+.round-corners {
+  border-radius: 6px 6px 6px 6px;
 }
 
 .pad input:checked ~ .background-fill {
@@ -281,16 +333,60 @@ fieldset {
 }
 
 .sub-label {
-  color: var(--b500);
-  font-size: 0.8em;
-  align-self: flex-end;
-  position: absolute;
+  
+  font-size: 1em;
+  /* align-self: flex-end; */
+  position: relative;
   max-width: 50px;
 }
 
-.pad input:checked ~ .sub-label {
+.pad input:checked ~ .background-fill {
     color: var(--b100);
 }
+
+.character-class-range {
+  position: relative;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  background: var(--b100);
+  display: flex;
+  padding: 5px;
+  border-radius: 0 0 6px 6px;
+  overflow: hidden;
+}
+
+.character-class-range label {
+  position: relative;
+  width: 50%;
+  overflow: hidden;
+}
+
+.character-class-range span {
+  display: block;
+  width: 100%;
+  font-size: 0.8em;
+  text-align: center;
+  color: var(--b300);
+}
+
+.character-class-min,
+.character-class-max {
+  text-align: center;
+  width: 100%;
+  border: none;
+  background: none;
+  font-size: 1.5em;
+  color: var(--b400);
+}
+
+.character-class-min:focus,
+.character-class-max:focus {
+  outline: none;
+  background-color: var(--b500);
+  color: var(--b200);
+}
+
 
 button#generate-password {
   background-color: var(--b600);
@@ -340,12 +436,27 @@ input[type="range"]:focus::-webkit-slider-runnable-track {
 footer {
   width: 100%;
   flex-shrink: 0;
+  position: relative;
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
 }
 
 .icon {
-  width: 24px;
-  height: 24px;
+  opacity: 0.7;
+  transition: 0.3s ease-in-out;
 }
+
+.icon:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.copyright {
+  font-size: 0.7em;
+  color: var(--w200);
+}
+
 
 .github {
   background: url('../img/github.svg');
