--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -30,6 +30,9 @@ body {
     overflow-y: hidden;
 }
   
+/*
+    Left Component
+*/
 #left {
     position: fixed;
     width: 100%;
@@ -46,59 +49,63 @@ body {
     transition: 
         width 0.5s ease-in-out,
         left 0.5s ease-in-out;
-
-    header {
-        width: 100%;
-        height: 100px;
-        flex-shrink: 0;
-    
-        h1 {
-            color: var(--b100);
-            font-size: 1.1em;
-        }
-    }
-
-    aside {
-        display: flex;
-        align-items: flex-end;
-        justify-content: center;
-        width: 50%;
-
-        img {
-            cursor: pointer;
-        }
-
-        p {
-            font-weight: 400;
-            color: var(--b500);
-            font-size: 0.8em;
-        }
-    }
-
-    footer {
-        width: 100%;
-        flex-shrink: 0;
-        position: relative;
-        display: flex;
-        align-items: baseline;
-        justify-content: space-between;
-
-        .icon {
-            opacity: 0.7;
-            transition: 0.3s ease-in-out;
-
-            &:hover {
-                opacity: 1;
-                cursor: pointer;
-            }
-        }
-
-        p {
-            font-size: 0.7em;
-            color: var(--w200);
-        }
-    } 
 }
+
+header {
+    width: 100%;
+    height: 100px;
+    flex-shrink: 0;
+
+    h1 {
+        color: var(--b100);
+        font-size: 1.1em;
+    }
+}
+
+aside {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    width: 50%;
+
+    img {
+        cursor: pointer;
+    }
+
+    p {
+        font-weight: 400;
+        color: var(--b500);
+        font-size: 0.8em;
+    }
+}
+
+footer {
+    width: 100%;
+    flex-shrink: 0;
+    position: relative;
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+
+    p {
+        font-size: 0.7em;
+        color: var(--w200);
+    }
+} 
+
+.icon {
+    opacity: 0.7;
+    transition: 0.3s ease-in-out;
+
+    &:hover {
+        opacity: 1;
+        cursor: pointer;
+    }
+}
+
+/*
+    Form Component
+*/
 
 form {
     width: 320px;
@@ -113,179 +120,6 @@ form {
     position: absolute;
     right: 0;
 
-    fieldset { border: none; }
-    .panel {
-        display: block;
-        padding-bottom: 20px;
-        width: 100%;
-
-        .options {
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-
-            .badge-left {
-                flex-grow: 2;
-                background: var(--b500);
-                color: var(--b100);
-                padding: 2px 10px 5px 10px;
-                border-radius: 6px 0 0 6px;
-            }
-                
-            .badge-right {
-                padding: 2px 10px 5px 10px;
-                background: var(--b200);
-                border-radius: 0 6px 6px 0;
-            
-                input {
-                    border: none;
-                    background: none;
-                    width: 2.5em;
-                    text-align: right;
-                    color: var(--b500);
-                    font-weight: 600;
-            
-                    &:focus {
-                        outline: none;
-                    }
-                }
-            }
-
-            .pad {
-                position: relative;
-                width: calc(50% - 10px);
-                height: 150px;
-                display: flex;
-                flex-direction: column;
-                /* background: var(--b200); */
-                border-radius: 6px;
-                /* padding: 10px; */
-                margin: 5px;
-                cursor: pointer;
-                /* overflow: hidden; */
-                transform-origin: center;
-                transition: 0.5s ease-in-out;
-            
-                .invisible {
-                    display: none;
-                }
-            
-                .background-fill {
-                    position: relative;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    flex-grow: 2;
-                    border-radius: 6px 6px 0 0;
-                    background: var(--b200);
-                    padding: 10px;
-                    color: var(--b500);
-
-                    &.round-corners {
-                        border-radius: 6px 6px 6px 6px;
-                    }
-
-                    .sub-label {
-
-                        font-size: 1em;
-                        /* align-self: flex-end; */
-                        position: relative;
-                        max-width: 50px;
-                    }
-                    .cross {
-                        position: absolute;
-                        top: 10px;
-                        right: 10px;
-                        width: 20px;
-                        height: 20px;
-                        border-radius: 50%;
-                        background: var(--b500);
-                        transition: transform 0.3s ease-in-out;
-                        transform: rotate(45deg);
-
-                        span {
-                            position: absolute;
-                            top: 50%;
-                            left: 50%;
-                            width: 10px;
-                            height: 2px;
-                            background: var(--b200);
-                            border-radius: 2px;
-                            transform-origin: center;
-                            transform: translate(-50%,-50%) rotate(45deg);
-
-                            &:nth-child(2) {
-                                transform: translate(-50%, -50%) rotate(-45deg);
-                            }
-                        }
-                    }
-                }
-            
-                input:checked ~ .background-fill {
-                    background: var(--b500);
-                    color: var(--b100);
-
-                    .cross {
-                        background: var(--b200);
-                        transform: rotate(0);
-                        span {
-                            background: var(--b500);
-                        }
-                    }
-                }
-
-                .character-class-range {
-                    position: relative;
-                    width: 100%;
-                    bottom: 0;
-                    left: 0;
-                    background: var(--b100);
-                    display: flex;
-                    padding: 5px;
-                    border-radius: 0 0 6px 6px;
-                    overflow: hidden;
-                
-                    label {
-                        position: relative;
-                        width: 50%;
-                        overflow: hidden;
-                
-                        span {
-                            display: block;
-                            width: 100%;
-                            font-size: 0.8em;
-                            text-align: center;
-                            color: var(--b300);
-                        }
-                
-                        .character-class-min,
-                        .character-class-max {
-                            text-align: center;
-                            width: 100%;
-                            border: none;
-                            background: none;
-                            font-size: 1.5em;
-                            color: var(--b400);
-                
-                            &:focus {
-                            outline: none;
-                            background: var(--b500);
-                            color: var(--b200);
-                            }
-                        }
-                    }
-                
-                    
-                }
-            }
-        }
-
-        legend {
-            color: var(--b500);
-            font-weight: 600;
-            padding: 5px 10px;
-        }
-    }
     button {
         padding: 10px 20px;
         margin-top: 30px;
@@ -301,6 +135,188 @@ form {
         font-weight: 600;
     }
 }
+
+fieldset { border: none; }
+
+.panel {
+    display: block;
+    padding-bottom: 20px;
+    width: 100%;
+
+
+
+
+}
+
+.options {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.badge-left {
+    flex-grow: 2;
+    background: var(--b500);
+    color: var(--b100);
+    padding: 2px 10px 5px 10px;
+    border-radius: 6px 0 0 6px;
+}
+    
+.badge-right {
+    padding: 2px 10px 5px 10px;
+    background: var(--b200);
+    border-radius: 0 6px 6px 0;
+
+    input {
+        border: none;
+        background: none;
+        width: 2.5em;
+        text-align: right;
+        color: var(--b500);
+        font-weight: 600;
+
+        &:focus {
+            outline: none;
+        }
+    }
+}
+
+.pad-button {
+    position: relative;
+    width: calc(50% - 10px);
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    /* background: var(--b200); */
+    border-radius: 6px;
+    /* padding: 10px; */
+    margin: 5px;
+    cursor: pointer;
+    /* overflow: hidden; */
+    transform-origin: center;
+    transition: 0.5s ease-in-out;
+}
+
+.invisible {
+    display: none;
+}
+
+.background-fill {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    flex-grow: 2;
+    border-radius: 6px 6px 0 0;
+    background: var(--b200);
+    padding: 10px;
+    color: var(--b500);
+
+    &.round-corners {
+        border-radius: 6px 6px 6px 6px;
+    }
+}
+
+.sub-label {
+
+    font-size: 1em;
+    /* align-self: flex-end; */
+    position: relative;
+    max-width: 50px;
+}
+
+.cross {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: var(--b500);
+    transition: transform 0.3s ease-in-out;
+    transform: rotate(45deg);
+
+    span {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 10px;
+        height: 2px;
+        background: var(--b200);
+        border-radius: 2px;
+        transform-origin: center;
+        transform: translate(-50%,-50%) rotate(45deg);
+
+        &:nth-child(2) {
+            transform: translate(-50%, -50%) rotate(-45deg);
+        }
+    }
+}
+
+input:checked ~ .background-fill {
+    background: var(--b500);
+    color: var(--b100);
+
+    .cross {
+        background: var(--b200);
+        transform: rotate(0);
+        span {
+            background: var(--b500);
+        }
+    }
+}
+
+.character-class-range {
+    position: relative;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    background: var(--b100);
+    display: flex;
+    padding: 5px;
+    border-radius: 0 0 6px 6px;
+    overflow: hidden;
+
+    label {
+        position: relative;
+        width: 50%;
+        overflow: hidden;
+
+        span {
+            display: block;
+            width: 100%;
+            font-size: 0.8em;
+            text-align: center;
+            color: var(--b300);
+        }
+    }  
+}
+
+.character-class-min,
+.character-class-max {
+    text-align: center;
+    width: 100%;
+    border: none;
+    background: none;
+    font-size: 1.5em;
+    color: var(--b400);
+
+    &:focus {
+    outline: none;
+    background: var(--b500);
+    color: var(--b200);
+    }
+}
+
+legend {
+    color: var(--b500);
+    font-weight: 600;
+    padding: 5px 10px;
+}
+
+/*
+    Generated Password Component
+*/
 
 .generated-password-wrapper {
     position: fixed;
@@ -318,137 +334,141 @@ form {
     display: none;
     pointer-events: none;
     z-index: 3;
+}
 
-    .generated-password {
-        position: relative;
-        width: 50%;
-        min-width: 250px;
-        background: var(--b400);
-        border-radius: 6px;
-        padding: 20px;
-        color: var(--w200);
-        font-size: 3em;
-        box-shadow: 2px 2px 30px 4px rgba(27, 62, 119, 0.36);
+.generated-password-self {
+    position: relative;
+    width: 50%;
+    min-width: 250px;
+    background: var(--b400);
+    border-radius: 6px;
+    padding: 20px;
+    color: var(--w200);
+    font-size: 3em;
+    box-shadow: 2px 2px 30px 4px rgba(27, 62, 119, 0.36);
+    cursor: pointer;
+    pointer-events: visible;
+
+    &:after {
+        content: ' ';
+        position: absolute;
+        width: 80px;
+        height: 100%;
+        top: 0;
+        right: 0;
+        background: linear-gradient(to right, transparent, var(--b400) 75%);
+        border-radius: 0 6px 6px 0;
+        pointer-events: none;
+    }
+}
+
+.generated-password-inner {
+    overflow: hidden;
+}
+
+#password-field {
+    font-family: 'Courier New', Courier, monospace;
+    white-space: nowrap;
+
+    &::selection {
+        background: var(--b500);
+    }
+}
+
+.btn-close {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: -10px;
+    right: -10px;
+    width: 20px;
+    height: 20px;
+    background: var(--b500);
+    z-index: 2;
+    border-radius: 10px;
+
+    span {
+        width: 10px;
+        height: 2px;
+        background: var(--b100);
+        border-radius: 2px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform-origin: center;
+        transform: translate(-50%, -50%) rotate(45deg);
         cursor: pointer;
-        pointer-events: visible;
 
-        &:after {
-            content: ' ';
-            position: absolute;
-            width: 80px;
-            height: 100%;
-            top: 0;
-            right: 0;
-            background: linear-gradient(to right, transparent, var(--b400) 75%);
-            border-radius: 0 6px 6px 0;
-            pointer-events: none;
-        }
+        &:nth-child(2) {
+            transform: translate(-50%, -50%) rotate(-45deg);
+          }
+    }
+}
 
-        .generated-password-inner {
-            overflow: hidden;
+.copy {
+    position: absolute;
+    font-size: 0.8rem;
+    bottom: -0.8em;
+    background: var(--b500);
+    color: var(--b100);
+    padding: 2px 5px 5px 5px;
+    border-radius: 6px;
+    opacity: 0;
+    transition: opacity 0.2s ease-in-out;
 
-            #password-field {
-                font-family: 'Courier New', Courier, monospace;
-                white-space: nowrap;
-            
-                &::selection {
-                    background: var(--b500);
-                }
-            }
-        }
+    &.show {
+        opacity: 1;
+    }
+}
 
-        .btn-close {
-            position: absolute;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            top: -10px;
-            right: -10px;
-            width: 20px;
-            height: 20px;
-            background: var(--b500);
-            z-index: 2;
-            border-radius: 10px;
-        
-            span {
-                width: 10px;
-                height: 2px;
-                background: var(--b100);
-                border-radius: 2px;
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform-origin: center;
-                transform: translate(-50%, -50%) rotate(45deg);
-                cursor: pointer;
-        
-                &:nth-child(2) {
-                    transform: translate(-50%, -50%) rotate(-45deg);
-                  }
-            }
-        }
+/*
+    Shortcuts Component
+*/
 
-        .copy {
-            position: absolute;
-            font-size: 0.8rem;
-            bottom: -0.8em;
-            background: var(--b500);
-            color: var(--b100);
-            padding: 2px 5px 5px 5px;
-            border-radius: 6px;
-            opacity: 0;
-            transition: opacity 0.2s ease-in-out;
+.shortcuts {
+    position: relative;
+    list-style: none;
+    margin-top: 100px;
+    width: 250px;
+    padding: 30px 20px 20px 20px;
+    background: var(--w200);
+    border-radius: 6px;
+    box-shadow: 2px 2px 20px rgba(0,0,0,0.1);
+    display: none;
 
-            &.show {
-                opacity: 1;
-            }
-        }
+    &:before {
+        content: "shortcuts";
+        position: absolute;
+        top: -0.7em;
+        left: 0.8em;
+        background: var(--b400);
+        color: var(--w200);
+        padding: 2px 10px 3px 10px;
+        border-radius: 6px;
     }
 
-    ul.shortcuts {
-        position: relative;
-        list-style: none;
-        margin-top: 100px;
-        width: 250px;
-        padding: 30px 20px 20px 20px;
-        background: var(--w200);
-        border-radius: 6px;
-        box-shadow: 2px 2px 20px rgba(0,0,0,0.1);
-        display: none;
-    
-        &:before {
-            content: "shortcuts";
-            position: absolute;
-            top: -0.7em;
-            left: 0.8em;
-            background: var(--b400);
-            color: var(--w200);
-            padding: 2px 10px 3px 10px;
+    li {
+        display: flex;
+        justify-content: space-between;
+        align-items: baseline;
+        font-size: 0.8em;
+        color: var(--b500);
+
+        .keyboard-btn {
+            position: relative;
+            background: var(--b500);
+            color: var(--b100);
+            padding: 5px 10px 8px 10px;
+            display: inline-block;
             border-radius: 6px;
+            min-width: 2.5em;
+            text-align: center;
         }
-    
-        li.shortcut {
-            display: flex;
-            justify-content: space-between;
-            align-items: baseline;
-            font-size: 0.8em;
-            color: var(--b500);
-    
-            .keyboard-btn {
-                position: relative;
-                background: var(--b500);
-                color: var(--b100);
-                padding: 5px 10px 8px 10px;
-                display: inline-block;
-                border-radius: 6px;
-                min-width: 2.5em;
-                text-align: center;
-            }
-        }
-          
-        li.shortcut + li.shortcut {
-            margin-top: 10px;
-        }
+    }
+      
+    li + li {
+        margin-top: 10px;
     }
 }
 
@@ -490,7 +510,7 @@ input[type="range"] {
     }
 }
 
-.back {
+.back-button {
     position: fixed;
     bottom: 20px;
     left: 10px;
@@ -524,7 +544,6 @@ input[type="range"] {
     }
 }
 
-
 .settings-open {
     overflow-y: scroll;
 
@@ -546,10 +565,8 @@ input[type="range"] {
         }
     }
 
-    .generated-password-wrapper {
-        .generated-password {
-            width: 100%;
-        }
+    .generated-password {
+        width: 100%;
     }
 
     .settings-open {
@@ -558,7 +575,7 @@ input[type="range"] {
             left: -100%;
         }
 
-        .back {
+        .back-button {
             display: block;
         }
     }
